Fix Support and Details page layout issues

--- a/src/app/pages/support/support.scss
+++ b/src/app/pages/support/support.scss
@@ -6,10 +6,8 @@
         background-color: color(cyan);
         color: color(neutral-lightest);
 
-        .subhead {
-            font-weight: inherit;
-            line-height: 1.8;
-            padding: 2rem 10rem 3rem;
+        h1 {
+            margin-bottom: 2.5rem;
         }
     }
 
